# cardinal/server/receipt.go
@@ -5,7 +5,7 @@ import (
 )
 
 type ListTxReceiptsRequest struct {
-	StartTick uint64 `json:"start_tick" mapstructure:"start_tick"`
+	StartTick uint64 `json:"startTick" mapstructure:"startTick"`
 }
 
 // ListTxReceiptsReply returns the transaction receipts for the given range of ticks. The interval is closed on
