# cardinal/server/swagger.yml
@@ -346,10 +346,10 @@ definitions:
                 type: object
     ListTxReceiptsRequest:
         required:
-            - start_tick
+            - startTick
         type: object
         properties:
-            start_tick:
+            startTick:
                 type: integer
                 format: int64
     ListTxReceiptsReply:
